--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,14 @@
 body {
   font-family: 'Merriweather', serif;
 }
-
 .container {
   width: 80%;
 }
-
 #submit,
 #favorites {
   background-color: #36558f;
   font-family: 'Merriweather', serif;
 }
-
 #logOut {
   display: inline;
   background-color: #fff;
@@ -19,23 +16,19 @@ body {
   margin-bottom: 20px;
   font-size: 12px;
 }
-
 .header {
   background-color: #36558f;
   height: 80px;
 }
-
 #map {
   height: 500px;
   width: 100%;
   margin: 0 auto;
   margin-top: 50px;
 }
-
 #floating-panel {
 margin: 0px;
 }
-
 h1 {
   text-align: center;
   color: #fff;
@@ -43,45 +36,58 @@ h1 {
   margin: auto 0;
   display: inline;
 }
-
+h2{
+  text-align: center;
+  font-size: 22px;
+  background-color: #36558f;
+  color: #fff;
+  padding: 10px;
+}
+h3 {
+  text-align: center;
+  font-family: 'Yeseva One', cursive;
+  font-size: 38px;
+}
+#login-view{
+  text-align: center;
+  margin-left: 33%;
+  margin-right: 33%;
+}
+/* #logIn, #register {
+ float: center;
+ /* margin: 33% */
+/* } */
 h4 {
   font-size: 22px;
   background-color: #36558f;
   color: #fff;
   padding: 10px;
 }
-
 .favCityButton {
   font-size: 18px;
   font-weight: bold;
   text-transform: capitalize;
   font-family: 'Merriweather', serif;
 }
-
 .formInput {
   width: 300px;
 }
-
 .favVenue {
   font-size: 14px;
   color: #2fa599;
   margin-left: 50px;
 }
-
 .deleteCity {
   font-size: 10px;
 }
-
 .formSubmit {
   background-color: #2fa599;
 }
-
 .addButton {
   background-color: #2fa599;
   color: #fff;
   font-family: 'Merriweather', serif;
  }
-
 /* .venueButton {
   display: block;
 } */
