fixed bug and made responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Merriweather', serif;
+  background-image: url('../img/grilled.png');
 }
 .container {
   width: 80%;
@@ -25,6 +26,7 @@ body {
   width: 100%;
   margin: 0 auto;
   margin-top: 50px;
+  border: 1px solid rgb(131, 128, 128);
 }
 #floating-panel {
 margin: 0px;
@@ -91,3 +93,7 @@ h4 {
 /* .venueButton {
   display: block;
 } */
+
+::placeholder {
+  color: rgb(131, 128, 128);
+}
